Fixed Colour Contrast for button

--- a/Jerry/css/style.css
+++ b/Jerry/css/style.css
@@ -109,7 +109,7 @@ h3{
 	display: inline-block;
 	font-size: 16px;
 	font-weight: bold;
-	color: #a64ee5;
+	color: #A349E4;
 	margin: 8px;
 	cursor: pointer;
 	font-family: sans-serif;
